# ai-agents-crash-course

./: pyproject.toml
course-01/: notebook.ipynb  output.md
course-01/.ipynb_checkpoints/: notebook-checkpoint.ipynb
course-02/: notebook.ipynb  research_crew.py
course-02/config/.ipynb_checkpoints/: agents-checkpoint.yaml  tasks-checkpoint.yaml
course-03/.ipynb_checkpoints/: notebook-checkpoint.ipynb
course-03/test_flow/: poem.txt  pyproject.toml
course-04/: notebook.ipynb
course-04/assets/: 5 Chunking Strategies For RAG - by Avi Chawla.md
course-04/book_flow/book_writing_flow/: book.md  crewai_flow.html  pyproject.toml
course-04/book_flow/book_writing_flow/src/book_writing_flow/: main.py
course-04/book_flow/book_writing_flow/src/book_writing_flow/crews/outline_crew/: outline_crew.py
course-04/book_flow/book_writing_flow/src/book_writing_flow/crews/writer_crew/: writer_crew.py
course-04/output/.ipynb_checkpoints/: draft-checkpoint.json
course-05/: latest_ai_news.txt  notebook.ipynb
course-06/: notebook.ipynb
course-07/: notebook.ipynb
course-07/.ipynb_checkpoints/: notebook-checkpoint.ipynb
course-08/: notebook.ipynb
course-09/: agent_memory.db  notebook.ipynb
course-09/agent_entity_memory.db/: chroma.sqlite3
course-09/short_term_memory.db/: chroma.sqlite3
course-10/: notebook.ipynb
course-11/: notebook.ipynb
course-12/: agent.py  notebook.ipynb  tool.py  utils.py
