[project]
name = "ai-agents-crash-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai==0.148",
    "crewai-tools>=0.51.1",
    "firecrawl-py>=2.16.1",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.4",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
